--- a/src/component/inputField/input.css
+++ b/src/component/inputField/input.css
@@ -6,7 +6,14 @@ input{
     height: 46px;
     text-indent:12px;
     width: 100%;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
+  }
+
+  input:focus{
+    height: 46px;
+    text-indent:12px;
+    width: 100%;
+    border: 2px solid #2777EF;
   }
 
   .show-hide{
