--- a/src/component/button/button.css
+++ b/src/component/button/button.css
@@ -6,3 +6,11 @@
     background-color: #2777EF;
     padding: 12px;
 }
+.disabled-button{
+    border: 0px;
+    width: 100px;
+    font-size: 16px;
+    color: #777;
+    background-color: #f9f9f9;
+    padding: 12px;
+}
