--- a/src/component/button/button.css
+++ b/src/component/button/button.css
@@ -1,16 +1,16 @@
-.button{
-    border: 0px;
-    width: 100px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #2777EF;
-    padding: 12px;
+.button {
+  border: 0px;
+  width: 100px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #2777ef;
+  padding: 12px;
 }
-.disabled-button{
-    border: 0px;
-    width: 100px;
-    font-size: 16px;
-    color: #777;
-    background-color: #f9f9f9;
-    padding: 12px;
+.disabled-button {
+  border: 0px;
+  width: 100px;
+  font-size: 16px;
+  color: #777;
+  background-color: #f9f9f9;
+  padding: 12px;
 }
