--- a/src/component/labelWithForgetPassword/labelWitForgetPassword.css
+++ b/src/component/labelWithForgetPassword/labelWitForgetPassword.css
@@ -1,15 +1,15 @@
-.forgot-password-label{
-    display: flex;
-    justify-content:space-between;   
+.forgot-password-label {
+  display: flex;
+  justify-content: space-between;
 }
-.label-text{
+.label-text {
   font-size: 16px;
 }
-.forgot-password-text{
-    font-size: 16px;
-    cursor: pointer;
-    color: #2777EF;
+.forgot-password-text {
+  font-size: 16px;
+  cursor: pointer;
+  color: #2777ef;
 }
-.require{
-    color: red;
+.require {
+  color: red;
 }
